--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsend": "^1.1.0",
+    "mongoose": "^8.10.1",
     "morgan": "^1.10.0"
   }
 }
